Adaptation du CSS Wordpress

--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -1,30 +1,29 @@
+{# Page d'affichage des jeux dans la partie publique #}
+
 {% extends "CommonBundle::common-layout.html.twig" %}
 
 {% block content %}
-    <h1>Les jeux de Strata'j'm</h1>
 
-    <table class="table table-bordered table-responsive">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Duration</th>
-                <th>Age</th>
-                <th>Rules</th>
-                <th>Releasedate</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div id="main-div" class="row">
+        <h2 id="pagetitle">Les jeux de Strata'j'm</h2>
+            <div id="filterDiv" class="col-xs-3 col-sm-3 col-md-2">
+                <p>Critères</p>
+                <p>Critères</p>
+                <p>Critères</p>
+                <p>Critères</p>
+                <p>Critères</p>
+                <p>Critères</p>
+                <p>Critères</p>
+            </div>
+        
+
         {% for game in games %}
-            <tr>
-                <td>{{ game.name }}</td>
-                <td>{{ game.duration }}</td>
-                <td>{{ game.age }}</td>
-                <td>{{ game.rules }}</td>
-                <td>{% if game.releaseDate %}{{ game.releaseDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-
-            </tr>
+            {{ game.name }}
+            {% if game.releaseDate %}{{ game.releaseDate|date('Y-m-d H:i:s') }}{% endif %}
         {% endfor %}
-        </tbody>
-    </table>
+
+    </div>
+
+    
 
 {% endblock %}
