--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -1,27 +1,40 @@
-{% extends '::base.html.twig' %}
+{% extends '::common-base.html.twig' %}
 
 {% block title %}Les jeux{% endblock %}
 
 {% block head %}
 	    {% block stylesheets %}
 
-        {{ parent() }}
+	        {{ parent() }}
 
-        {% stylesheets
+		        {% stylesheets
 
-        '@AdminBundle/Resources/public/css/bootstrap-table.min.css'
-        '@AdminBundle/Resources/public/css/jasny-bootstrap.min.css'
-        '@AdminBundle/Resources/public/css/navmenu-push.css'
+			        'bundles/common/css/common-theme.css'
 
-        %}
+		        %}
 
-        <link rel="stylesheet" href="{{ asset_url }}" />
+	        <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
     {% endblock %}
 {% endblock %}
 
 {% block body %}
+	<header>
+		<h1 class="row">STRATAGEM LOGO</h1>
+		<nav id="nav-bar" class="row">
+			<span class="nav-element">Nav 1</span>
+			<span class="nav-element">Nav 2</span>
+			<span class="nav-element">Nav 3</span>
+			<span class="nav-element">Nav 4</span>
+		</nav>
+	</header>
+
 	{% block content %}
 	{% endblock %}
+
+	<footer class="row">
+		<img src="http://stratajm-idf.fr/wp-content/uploads/2012/09/logofb.png" width="27" height="27">
+		<p id="footer-mentions">BP 120 92704 Colombes cedex, Tél : 01-47-82-80-56 Copyright © [strata'J'M] 2012<p>
+	</footer>
 
 {% endblock %}
