--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -5,21 +5,6 @@ body {
 header {
 }
 
-#nav-bar, #main-div {
-  padding: 14px;
-
-}
-
-#main-div {
-  background-color: #ffffff;
-
-}
-
-#pagetitle {
-  color: #1E3F52;
-  font-family: Arial, Helvetica, Sans-Serif;
-  font-size: 24px;
-}
 
 #nav-bar {
   background-color: #5C3E37;
@@ -29,6 +14,34 @@ header {
   color: #F2EAE9;
   padding-left: 26px;
   padding-right: 26px;
+}
+
+#nav-bar, #main-div {
+  padding: 14px;
+
+}
+
+
+#pagetitle {
+  color: #1E3F52;
+  font-family: Arial, Helvetica, Sans-Serif;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#filter-panel {
+  border: solid red;
+}
+
+#main-div {
+  background-color: #ffffff;
+
+}
+
+.game-sticker {
+  width:180px;
+  height:171px;
 }
 
 footer {
