--- a/app/Resources/views/common-base.html.twig
+++ b/app/Resources/views/common-base.html.twig
@@ -8,11 +8,14 @@
         {% block stylesheets %}
             {% stylesheets
             '@CommonBundle/Resources/public/css/bootstrap.min.css'
+            '@CommonBundle/Resources/public/css/jquery-ui.min.css'
 
             %}
             <link rel="stylesheet" href="{{ asset_url }}" />
             {% endstylesheets %}
         {% endblock %}
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body class="
@@ -23,6 +26,8 @@
         {% block javascripts %}
             {% javascripts
                 '@CommonBundle/Resources/public/js/jquery.min.js'
+                '@CommonBundle/Resources/public/js/jquery-ui.min.js'
+                '@CommonBundle/Resources/public/js/search.js'
                 '@CommonBundle/Resources/public/js/bootstrap.min.js'
             %}
             <script src="{{ asset_url }}"></script>
