--- a/src/AdminBundle/Resources/views/member/index.html.twig
+++ b/src/AdminBundle/Resources/views/member/index.html.twig
@@ -36,9 +36,93 @@
         </tbody>
     </table>
 
+
+    <table id="table"
+           data-toggle="table"
+           data-url="{{ path("members_resp") }}"
+           data-toolbar="#toolbar"
+           data-show-columns="true"
+           data-locale="fr-FR"
+           data-pagination="true"
+           data-side-pagination="server"
+           data-page-list="[5, 10, 20, 50, 100, 200]"
+           data-page-size="10"
+           data-search="true"
+           data-show-refresh="true"
+           data-sort-order="desc"
+           data-row-style="rowStyle"
+    >
+        <thead>
+        <tr>
+            <th data-field="prenom">Prénom</th>
+            <th data-field="nom">Nom</th>
+            <th data-field="email">Email</th>
+            <th data-field="telNum">Numéro téléphone</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+        </tr>
+        </thead>
+    </table>
+
     <ul>
         <li>
             <a href="{{ path('admin_member_new') }}">Create a new member</a>
         </li>
     </ul>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        var data = [
+            {
+                "name": "bootstrap-table",
+                "stargazers_count": "526",
+                "forks_count": "122",
+                "description": "An extended Bootstrap table with radio, checkbox, sort, pagination, and other added features. (supports twitter bootstrap v2 and v3) "
+            },
+            {
+                "name": "multiple-select",
+                "stargazers_count": "288",
+                "forks_count": "150",
+                "description": "A jQuery plugin to select multiple elements with checkboxes :)"
+            },
+            {
+                "name": "bootstrap-show-password",
+                "stargazers_count": "32",
+                "forks_count": "11",
+                "description": "Show/hide password plugin for twitter bootstrap."
+            },
+            {
+                "name": "blog",
+                "stargazers_count": "13",
+                "forks_count": "4",
+                "description": "my blog"
+            },
+            {
+                "name": "scutech-redmine",
+                "stargazers_count": "6",
+                "forks_count": "3",
+                "description": "Redmine notification tools for chrome extension."
+            }
+        ];
+
+        $(function () {
+
+            function queryParams(params) {
+                alert(params);
+                 console.log(JSON.stringify(params));die();
+                // {"limit":10,"offset":0,"order":"asc","your_param1":1,"your_param2":2}
+                return params;
+            }
+
+            $('#table').bootstrapTable({
+                queryParams: function (p) {
+                    return p;
+                },
+
+
+                data: data
+            });
+        });
+    </script>
 {% endblock %}
