Modif du formulaire de création de jeu

--- a/app/Resources/views/common-base.html.twig
+++ b/app/Resources/views/common-base.html.twig
@@ -15,10 +15,7 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body class="
-        col-md-10
-        col-md-offset-1
-        ">
+    <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
             {% javascripts
