--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -9,7 +9,7 @@
 
 		        {% stylesheets
 
-			        'bundles/common/css/common-theme.css'
+			        '@CommonBundle/Resources/public/css/common-theme.css'
 
 		        %}
 
@@ -22,10 +22,11 @@
 	<header>
 		<h1 class="row">STRATAGEM LOGO</h1>
 		<nav id="nav-bar" class="row">
-			<span class="nav-element">Nav 1</span>
-			<span class="nav-element">Nav 2</span>
-			<span class="nav-element">Nav 3</span>
-			<span class="nav-element">Nav 4</span>
+			<span class="nav-element">Qui sommes nous</span>
+			<span class="nav-element">Nos propositions</span>
+			<span class="nav-element">Nos prochaines animations</span>
+			<span class="nav-element">Nos dernières animations</span>
+			<span class="nav-element">Contact</span>
 		</nav>
 	</header>
 
