--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -6,8 +6,8 @@
 
     <div id="main-div" class="row">
         <h2 id="pagetitle">Les jeux de Strata'j'm</h2>
-        
-        <div id="filter-panel" class="col-xs-3 col-sm-3 col-md-2">
+
+        <div id="filter-panel" class="col-xs-3 col-sm-3 col-md-4">
             <p>Critères</p>
             <p>Critères</p>
             <p>Critères</p>
@@ -16,19 +16,21 @@
             <p>Critères</p>
             <p>Critères</p>
         </div>
-    
+
         <div id="games-panel" class="col-xs-7 col-sm-7 col-md-8">
             {% for game in games %}
                 <a class="game-sticker thumbnail" href="#">
-                    <img src="#" alt="#" class="game-image">                
-                    <div class="game-name">{{ game.name }}</div>
-
+                    <img src="#" alt="#" class="game-image">
+                    <div class="game-sticker-name">{{ game.name }}</div>
+                    <div class="game-sticker-rules">Règles : {{ game.rules }}</div>
+                    <div class="game-sticker-editor">Editeur : {{ game.publisher }} </div>
                 </a>
             {% endfor %}
         </div>
 
+
     </div>
 
-    
+
 
 {% endblock %}
