--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -17,14 +17,16 @@
             <p>Critères</p>
         </div>
 
-        <div id="games-panel" class="col-xs-7 col-sm-7 col-md-8">
+        <div id="games-panel">
             {% for game in games %}
-                <a class="game-sticker thumbnail" href="#">
-                    <img src="#" alt="#" class="game-image">
-                    <div class="game-sticker-name">{{ game.name }}</div>
-                    <div class="game-sticker-rules">Règles : {{ game.rules }}</div>
-                    <div class="game-sticker-editor">Editeur : {{ game.publisher }} </div>
-                </a>
+                <div class="game-sticker thumbnail col-xs-2 col-sm-2 col-md-2" href="#">
+                    <a href="{{ game.publisher.url | external_link }}" ><img src="#" alt="#" class="game-image"></a>
+                </div>
+                <div class="game-sticker-info">
+                  <div class="game-sticker-name">{{ game.name }}</div>
+                  <div class="game-sticker-rules">Règles : {{ game.rules }}</div>
+                  <div class="game-sticker-editor">Editeur : {{ game.publisher.name }} </div>
+                </div>
             {% endfor %}
         </div>
 
