--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,11 +16,16 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+
             {% javascripts
                 '@CommonBundle/Resources/public/js/jquery.min.js'
                 '@CommonBundle/Resources/public/js/bootstrap.min.js'
             %}
+
             <script src="{{ asset_url }}"></script>
+            <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+
             {% endjavascripts %}
         {% endblock %}
     </body>
