--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -6,6 +6,10 @@
     <table>
         <tbody>
             <tr>
+                <th>Image</th>
+                <td><img style="width:30%;" src="{{ asset('uploads/images/' ~ game.image) }}"/></td>
+            </tr>
+            <tr>
                 <th>Id</th>
                 <td>{{ game.id }}</td>
             </tr>
