--- a/src/AdminBundle/Resources/views/game/edit.html.twig
+++ b/src/AdminBundle/Resources/views/game/edit.html.twig
@@ -4,6 +4,10 @@
     <h1>Game edit</h1>
 
     {{ form_start(edit_form) }}
+        {{ form_label(edit_form.image) }}
+        <img style="width:10%;" src="{{ asset('uploads/images/' ~ oldImageName) }}"/>
+        {{ form_widget(edit_form.image) }}
+
         {{ form_widget(edit_form) }}
         <input type="submit" value="Edit" />
     {{ form_end(edit_form) }}
