--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <th>Age</th>
-                <td>{{ game.age }}</td>
+                <td>{{ game.ageMin }} - {{ game.ageMax }}</td>
             </tr>
             <tr>
                 <th>Rules</th>
