--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -21,6 +21,9 @@
         </div>
 
         <div id="games-panel">
+          <div id="loader" class="text-center">
+            <img src="{{ asset('images/loader.gif') }}" alt="#" class="game-image">
+          </div>
             {% for game in games %}
 
                 <div class="game-sticker-info">
@@ -37,6 +40,7 @@
 
 
     </div>
+
 
 
 
