Adding jquery-ui.min.css

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}
             {% stylesheets
             '@CommonBundle/Resources/public/css/bootstrap.min.css'
+            '@CommonBundle/Resources/public/css/jquery-ui.min.css'
 
             %}
             <link rel="stylesheet" href="{{ asset_url }}" />
