--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e8d8c9;
-  width: 890px;
+  width: 920px;
   height: 100%;
   margin: auto;
 }
@@ -13,7 +13,7 @@ header {
 }
 
 #main-div {
-  height: 100%;
+  height: 100vh;
   background-color: #F2EAE9;
 }
 
@@ -55,13 +55,17 @@ header {
   margin-bottom: 20px;
 }
 
-#games-panel {
-  height: 100%;
+#filter-panel {
+  height:100%;
+  width: 30%;
+  float: left;
+  margin-right: 5%;
 }
 
-#filter-panel {
-  border: solid ;
-  height:100%;
+#games-panel {
+  width: 65%;
+  height: 100%;
+  float: left;
 }
 
 
@@ -75,11 +79,24 @@ header {
   display: none;
 }
 
+.game-sticker {
+  width:100%;
+  height:30%;
+}
+
 .game-sticker .game-sticker-image {
   width:180px;
   height:171px;
 }
 
+.game-sticker-image {
+  float: left;
+  margin-right: 5%;
+}
+
+.game-sticker-info {
+  float:left;
+}
 
 /*******************/
 /* singleGame page */
