--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -19,14 +19,14 @@
 {% endblock %}
 
 {% block body %}
-	<header class="row">
+	<header>
 		<div id="header-images">
 			<img src="{{ asset('images/header.jpg') }}" alt="Logo Strata'j'm"/>
 			<img src=" {{ asset('images/nav.png') }}" alt="Nav logo"/>
 		</div>
 
 
-		<nav id="nav-bar" class="row">
+		<nav id="nav-bar">
 			<div class="nav-element"><a href="#">Qui sommes nous</a></div>
 			<div class="nav-element"><a href="#">Nos propositions</a></div>
 			<div class="nav-element"><a href="#">Nos prochaines animations</a></div>
@@ -38,7 +38,7 @@
 	{% block content %}
 	{% endblock %}
 
-	<footer class="row">
+	<footer>
 		<img src="http://stratajm-idf.fr/wp-content/uploads/2012/09/logofb.png" width="27" height="27">
 		<p id="footer-mentions">BP 120 92704 Colombes cedex, Tél : 01-47-82-80-56 Copyright © [strata'J'M] 2012<p>
 	</footer>
