--- a/src/CommonBundle/Resources/views/Default/singleGame.html.twig
+++ b/src/CommonBundle/Resources/views/Default/singleGame.html.twig
@@ -1,22 +1,16 @@
 {% extends "CommonBundle::common-layout.html.twig" %}
 
 {% block content %}
-  <div id="main-div" class="row">
+  <div id="main-div">
     <h2 id="pagetitle">{{ game.name }}</h2>
 
-    <div class="media game-displayer">
-      <div class="media-left media-middle game-media">
-        <img  class="media-object game-image" src="{{ asset('uploads/images/' ~ game.image) }}" alt="Image du jeu {{ game.name }}">
-      </div>
-      <div class="panel panel-default media-body">
-        <div class="panel-body">
-          <span>{{ game.rules }}</span>
-          <span>{{ game.releaseDate | date("d/m/Y") }}</span>
-          <span>{{ game.ageMin }}</span>
-          <span>{{ game.ageMax }}</span>
-        </div>
-      </div>
+    <img  id="single-game-image" src="{{ asset('uploads/images/' ~ game.image) }}" alt="Image du jeu {{ game.name }}"/>
+    <div id="single-game-text">
+      <p>Règles : {{ game.rules }}</p>
+      <p>Date de sortie : {{ game.releaseDate | date("d/m/Y") }}</p>
+      <p>De {{ game.ageMin }} à {{ game.ageMax }} ans</p>
     </div>
+  </div>
 
 
   </div>
