--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -108,11 +108,12 @@ header {
   width: 40%;
   height: 40%;
   float: left;
+  border: solid black 2px;
 }
 
 #single-game-text {
   float: left;
-
+  margin-left: 15px;
 }
 
 
