--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -7,43 +7,43 @@
     <div id="main-div" class="row">
         <h2 id="pagetitle">Les jeux de Strata'j'm</h2>
 
-        <div id="filter-panel" class="col-xs-3 col-sm-3 col-md-2">
+        <div id="filter-panel" class="col-xs-3 col-sm-3 col-md-4">
 
 
         {{ form_start(searchForm, {'attr': {'class': 'form-inline'} }) }}
         {{ form_widget(searchForm) }}
         {{ form_end(searchForm) }}
 
-
         {{ form_start(sortForm) }}
         {{ form_widget(sortForm) }}
         {{ form_end(sortForm) }}
 
-
         </div>
 
         <div id="games-panel">
-          <div id="loader" class="text-center">
-            <img src="{{ asset('images/loader.gif') }}" alt="#" class="game-image">
-          </div>
-            {% for game in games %}
+
+        {{ include('CommonBundle:Default:listGames.html.twig', { 'pagination': pagination }) }}
+
+
+
+</div>
+</div>
+
+            {# for game in games %}
 
                 <div class="game-sticker-info">
                   <div class="game-sticker thumbnail col-xs-2 col-sm-2 col-md-2" href="#">
                       <img src="#" alt="#" class="game-image">
                   </div>
-                  <div class="game-sticker-name">{{ game.name }}</div>
-                  <div class="game-sticker-rules">Règles : {{ game.rules }}</div>
-                  <div class="game-sticker-editor">Editeur : <a href="{{ game.publisher.url | external_link }}" >{{ game.publisher.name }} </a> </div>
+                  <div class="game-sticker-name">{# game.name }}</div>
+                  <div class="game-sticker-rules">Règles : {# game.rules }}</div>
+                  <div class="game-sticker-editor">Editeur : <a href="{# game.publisher.url | external_link }}" >{# game.publisher.name }} </a> </div>
                 </div>
-            {% endfor %}
+            {# endfor #}
 
         </div>
 
 
     </div>
-
-
-
 
 {% endblock %}
