--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -6,13 +6,11 @@
 
     <div id="main-div">
         <h2 id="pagetitle">Les jeux de Strata'j'm</h2>
+        {{ form_start(searchForm, {'attr': {'class': 'form-inline form-game-search'} }) }}
+        {{ form_widget(searchForm) }}
+        {{ form_end(searchForm) }}
+
         <div id="filter-panel">
-
-
-          {{ form_start(searchForm, {'attr': {'class': 'form-inline'} }) }}
-          {{ form_widget(searchForm) }}
-          {{ form_end(searchForm) }}
-
 
           {{ form_start(sortForm) }}
           {{ form_widget(sortForm) }}
